<resources>
    <string name="app_name">GRS</string>
    <string name="welcome">Welcome to Medical City!</string>
    <string name="welcome_msg">Setting an appointment to your doctors in just simple clicks.</string>
    <string name="about">About Us</string>
    <string name="overview">Overview</string>
    <string name="contact">Contact Us</string>
    <string name="help">Help</string>
    <string name="home_link">Back to Home</string>
    <string name="existpat_welcome_header">WELCOME BACK PATIENT</string>
    <string name="existpat_nhi">Please provide your NHI number so we can pull up your record</string>
    <string name="newpat_welcome_header">WELCOME PATIENT</string>
    <string name="newpat_msg">Please complete your profile for our record</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="home_address">Home Address</string>
    <string name="pat_phone_num">Phone Number</string>
    <string name="new_pat_nhi">If you know your NHI number please provide below. If not, please inform your doctor or GP.</string>
    <string name="speciality">SELECT SPECIALITY</string>
    <string name="service">CHOOSE THE SERVICE YOU NEEDED</string>
    <string name="specialty_link">Back to Speciality</string>
    <string name="doctor_list">LIST OF DOCTORS</string>
    <string name="header_contact">How to Reach Us?</string>
    <string name="contact_details">There are 2 ways to send your comments or queries. You can send us a message via email or sms.</string>
    <string name="email1">acdimaano@gmail.com</string>
    <string name="email2">rhizaroque@gmail.com</string>
    <string name="sms_details">Drop us a line so we can attend to your queries.</string>
    <string name="sms_label">Type your message here:</string>
    <string name="app_title">Generic Registration System</string>
    <string name="sub_title">A way to automate your registration process</string>
    <string name="overview_desc">Generic Registration System is an application which can be widely used on different industry, such as hospitals, schools, libraries, hotels and offices. This can be customized based on the specific industry that will use this application.</string>
    <string name="about_desc">Alan and Rhiza are students from Cornell Institute of Business and Technology taking up Software Development under the supervision of Shuaib Memon. This mobile application is created as one of their requirements, but at the same time this will be used in the industry.</string>
    <string name="about_us">About Us</string>
    <string name="lock_desc">We make sure that all of your personal details are well secured.</string>
    <string name="lock_title">Data Security</string>
    <string name="mobile_desc">Connect over the net to book an appointment and get the latest update for your doctor\'s schedule.</string>
    <string name="mobile_title">Use your Mobile Phone</string>
    <string name="clock_desc">No need to call to set an appointment or check the availability of the doctors.</string>
    <string name="clock_title">Save your Time</string>
    <string name="user_desc">Less is more. Simple interface that all ages can easily follow and understand.</string>
    <string name="user_title">User Friendly</string>
</resources>
