<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity">

    <!-- Header layout -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/header">

        <TextView
            android:id="@+id/lblNewPat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/newpat_welcome_header"
            android:textColor="#212121"
            android:paddingTop="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <!-- Content layout -->
    <ScrollView
        android:id="@+id/newpatient_screen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/header"
        android:layout_above="@+id/footer"
        android:background="#E1F5FE">

        <RelativeLayout
            android:id="@+id/existpat_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/lblNewPatMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newpat_msg"
                android:textColor="#212121"
                android:paddingTop="10dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/lblFName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First Name *"
                android:layout_below="@+id/lblNewPatMsg"
                android:layout_marginTop="20dp"
                android:paddingRight="70dp"
                android:textColor="#212121"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/lblLName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Name *"
                android:layout_below="@+id/lblNewPatMsg"
                android:layout_toRightOf="@+id/lblFName"
                android:layout_marginTop="20dp"
                android:textColor="#212121"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/txtFName"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/lblFName"
                android:layout_below="@+id/lblFName"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_design"
                android:textSize="16sp"
                android:layout_marginRight="35dp"/>

            <EditText
                android:id="@+id/txtLName"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/lblLName"
                android:layout_below="@+id/lblLName"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/txtFName"
                android:background="@drawable/edittext_design"
                android:textSize="16sp"/>


            <TextView
                android:id="@+id/lblGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="#212121"
                android:layout_below="@+id/txtFName"
                android:layout_marginTop="20dp"
                android:textSize="16sp"/>

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblGender"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/rbtnMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textColor="#212121"
                    android:layout_marginRight="20dp"
                    android:textSize="16sp"
                    android:button="@drawable/radiobtn_design"/>

                <RadioButton
                    android:id="@+id/rbtnFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_marginRight="20dp"
                    android:textColor="#212121"
                    android:textSize="16sp"
                    android:button="@drawable/radiobtn_design" />

                <RadioButton
                    android:id="@+id/rbtnOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textColor="#212121"
                    android:textSize="16sp"
                    android:button="@drawable/radiobtn_design"
                    android:checked="true" />
            </RadioGroup>

            <TextView
                android:id="@+id/lblAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_address"
                android:textColor="#212121"
                android:layout_below="@+id/gender"
                android:layout_marginTop="15dp"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/txtHomeAdd"
                android:layout_width="290dp"
                android:layout_height="30dp"
                android:layout_below="@+id/lblAddress"
                android:background="@drawable/edittext_design"
                android:layout_marginTop="15dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/lblPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pat_phone_num"
                android:textColor="#212121"
                android:layout_below="@+id/txtHomeAdd"
                android:layout_marginTop="20dp"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/txtPatPhone"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_below="@+id/lblPhone"
                android:background="@drawable/edittext_design"
                android:layout_marginTop="15dp"
                android:textSize="16sp"/>


            <TextView
                android:id="@+id/lblNewNHI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_pat_nhi"
                android:textColor="#212121"
                android:layout_below="@+id/txtPatPhone"
                android:layout_marginTop="20dp"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/txtNHI"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_below="@+id/lblNewNHI"
                android:background="@drawable/edittext_design"
                android:layout_marginTop="15dp"
                android:textSize="16sp"/>

            <ImageButton
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/submit"
                android:layout_below="@+id/txtNHI"
                android:layout_marginTop="20dp"
                android:onClick="btnNewSubmit"/>

            <ImageButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cancel"
                android:layout_below="@+id/txtNHI"
                android:layout_toRightOf="@+id/btnSubmit"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:onClick="btnCancel"/>

        </RelativeLayout>

    </ScrollView>

    <!-- Footer layout -->
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="left"
        android:background="#212121"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="#fff"
            android:paddingRight="15dp"
            android:onClick="tvAbout"
            android:clickable="true"/>

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textColor="#fff"
            android:layout_toRightOf="@+id/about"
            android:paddingRight="15dp"
            android:onClick="tvOverview"
            android:clickable="true"/>

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="#fff"
            android:layout_toRightOf="@+id/overview"
            android:paddingRight="15dp"
            android:onClick="tvContact"
            android:clickable="true"/>

        <TextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:layout_toRightOf="@+id/contact"
            android:textColor="#fff"
            android:onClick="tvHelp"
            android:clickable="true"/>

    </RelativeLayout>

</RelativeLayout>









